# liblogfaf

./: CONTRIBUTING.md  LICENSE  Makefile.am  PATENTS  README.md  configure.ac
src/: Makefile.am  liblogfaf.c  logfaf.in
